router/apollo-router/tests/snapshots/integration_tests__defer_default_variable-3.snap
---
source: apollo-router/tests/integration_tests.rs
expression: stream.next().await.unwrap().unwrap()
---
{
  "data": {
    "me": {
      "id": "1",
      "name": "Ada Lovelace"
    }
  }
}
