router/apollo-router/tests/snapshots/integration_tests__defer_empty_primary_response.snap
---
source: apollo-router/tests/integration_tests.rs
expression: stream.next().await.unwrap().unwrap()
---
{
  "data": {},
  "hasNext": true
}
