router/apollo-router/tests/snapshots/integration_tests__defer_path.snap
---
source: apollo-router/tests/integration_tests.rs
expression: stream.next().await.unwrap().unwrap()
---
{
  "data": {
    "me": {
      "id": "1"
    }
  },
  "hasNext": true
}
