router/apollo-router/tests/snapshots/integration_tests__defer_path_in_array.snap
---
source: apollo-router/tests/integration_tests.rs
expression: stream.next().await.unwrap().unwrap()
---
{
  "data": {
    "me": {
      "reviews": [
        {
          "id": "1",
          "author": {
            "id": "1"
          }
        },
        {
          "id": "2",
          "author": {
            "id": "1"
          }
        }
      ]
    }
  },
  "hasNext": true
}
